--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
     content="260 Free Online Tools — No Sign-Up, No Limits, Forever Free. Productivity, Finance, Health, File Converters, and more." />
   <title>Tool260 - 260 Free Online Tools</title>
 
+  <meta name="google-adsense-account" content="ca-pub-9433763808225097">
   <!-- Google AdSense -->
-  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-XXXXXXXXXXXXXXXX"
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9433763808225097"
     crossorigin="anonymous"></script>
 </head>
 
