Optimize SEO: Improve ranking for 'Tool 260' and 'img to pdf' keywords

--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
   <link rel="icon" type="image/svg+xml" href="/vite.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="description"
-    content="260 Free Online Tools — No Sign-Up, No Limits, Forever Free. Productivity, Finance, Health, File Converters, and more." />
-  <title>Tool260 - 260 Free Online Tools</title>
+    content="Tool 260 - 260 Free Online Tools. No Sign-Up, No Limits, Forever Free. Productivity, Finance, Health, File Converters, and more." />
+  <title>Tool260 - Tool 260 Free Online Tools</title>
 
   <meta name="google-adsense-account" content="ca-pub-9433763808225097">
   <!-- Google AdSense -->
