feat: replace AdSense with Monetag Push Notifications

--- a/index.html
+++ b/index.html
@@ -9,10 +9,8 @@
     content="Tool 260 - 260 Free Online Tools. No Sign-Up, No Limits, Forever Free. Productivity, Finance, Health, File Converters, and more." />
   <title>Tool260 - Tool 260 Free Online Tools</title>
 
-  <meta name="google-adsense-account" content="ca-pub-9433763808225097">
-  <!-- Google AdSense -->
-  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9433763808225097"
-    crossorigin="anonymous"></script>
+  <!-- Monetag Push Notifications -->
+  <script src="https://3nbf4.com/act/files/tag.min.js?z=10342759" data-cfasync="false" async></script>
 </head>
 
 <body>
