--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
   <link rel="icon" type="image/svg+xml" href="/vite.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="description"
-    content="Tool 260 - 260 Free Online Tools. No Sign-Up, No Limits, Forever Free. Productivity, Finance, Health, File Converters, and more." />
-  <title>Tool260 - Tool 260 Free Online Tools</title>
+    content="Tool 260 (Tool260) - Your collection of 260+ free online tools. PDF converters, image editors, and utilities. No sign-up required." />
+  <title>Tool 260 - Free Online Tools</title>
 
   <!-- Monetag Push Notifications -->
   <script src="https://3nbf4.com/act/files/tag.min.js?z=10342759" data-cfasync="false" async></script>
